ConnexoProject/force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <description>Observation Module linked to Dev module</description>
    <label>Observation</label>
    <nameField>
        <displayFormat>OBS-{00000}</displayFormat>
        <label>Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>