ConnexoProject/force-app/main/default/objects/Observation__c/fields/Assigned_To_Area__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Area__c</fullName>
    <label>Assigned To Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMPL123QMS__Department</valueSetName>
    </valueSet>
</CustomField>