ConnexoProject/force-app/main/default/objects/Observation__c/fields/Date_Observed__c.field-meta.xml
<CustomField>
    <fullName>Date_Observed__c</fullName>
    <inlineHelpText>Date Observed should be equal to or after Date of Occurrence</inlineHelpText>
    <label>Date Observed</label>
    <type>Date</type>
</CustomField>