ConnexoProject/force-app/main/default/objects/Observation__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>Date is Date Created</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date Opened == Date Created</inlineHelpText>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>