ConnexoProject/force-app/main/default/objects/Observation__c/fields/Deviated_SOP__c.field-meta.xml
<CustomField>
    <fullName>Deviated_SOP__c</fullName>
    <inlineHelpText>List all SOP’s/WIN’s impacted, enter NA if none.</inlineHelpText>
    <label>Deviated SOP</label>
    <type>TextArea</type>
</CustomField>