ConnexoProject/force-app/main/default/objects/Observation__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations_del1</relationshipName>
    <type>Lookup</type>
</CustomField>