ConnexoProject/force-app/main/default/objects/Observation__c/fields/Equipment_Names__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Names__c</fullName>
    <inlineHelpText>List impacted equipment, enter NA if none.</inlineHelpText>
    <label>Equipment Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>