ConnexoProject/force-app/main/default/objects/Observation__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <inlineHelpText>Describe Who, What, When, Where, Why for the Observation.</inlineHelpText>
    <label>Event Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>