ConnexoProject/force-app/main/default/objects/Observation__c/fields/General_Comment__c.field-meta.xml
<CustomField>
    <fullName>General_Comment__c</fullName>
    <inlineHelpText>Enter additional information relevant to the observation not captured in other fields.</inlineHelpText>
    <label>General Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>