ConnexoProject/force-app/main/default/objects/Observation__c/fields/Immediate_Actions__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Actions__c</fullName>
    <inlineHelpText>Action taken to eliminate / minimize the impact the observation including notifications to inform others of the observation.</inlineHelpText>
    <label>Immediate Actions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>