ConnexoProject/force-app/main/default/objects/Observation__c/fields/Impact_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Impact_Analysis__c</fullName>
    <description>Impact Analysis</description>
    <inlineHelpText>Define potential consequences of the observation that should be considered during review process.</inlineHelpText>
    <label>Impact Analysis</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>