ConnexoProject/force-app/main/default/objects/Observation__c/fields/Impacted_Department_Other__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Department_Other__c</fullName>
    <label>Impacted Department Other</label>
    <type>TextArea</type>
</CustomField>