ConnexoProject/force-app/main/default/objects/Observation__c/fields/Impacted_Departments__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Departments__c</fullName>
    <inlineHelpText>List all documents impacted, enter NA if none.</inlineHelpText>
    <label>Impacted Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TWD_Department</valueSetName>
    </valueSet>
</CustomField>