ConnexoProject/force-app/main/default/objects/Observation__c/fields/Impacted_Document__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Document__c</fullName>
    <inlineHelpText>List all documents impacted, enter NA if none.</inlineHelpText>
    <label>Impacted Document</label>
    <type>TextArea</type>
</CustomField>