ConnexoProject/force-app/main/default/objects/Observation__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Global Picklist Values</description>
    <inlineHelpText>Enter the location into the Location Other field if not found on this list.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location</valueSetName>
    </valueSet>
</CustomField>