ConnexoProject/force-app/main/default/objects/Observation__c/fields/Location_Other__c.field-meta.xml
<CustomField>
    <fullName>Location_Other__c</fullName>
    <inlineHelpText>Enter additional details for impacted location.</inlineHelpText>
    <label>Location Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>