ConnexoProject/force-app/main/default/objects/Observation__c/fields/Owner_Area__c.field-meta.xml
<CustomField>
    <fullName>Owner_Area__c</fullName>
    <label>Owner Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMPL123QMS__Department</valueSetName>
    </valueSet>
</CustomField>