ConnexoProject/force-app/main/default/objects/Observation__c/fields/Problem_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Problem_Categorization__c</fullName>
    <label>Problem Categorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Testing (In-Process)</fullName>
            </value>
            <value>
                <fullName>Testing (Release/Stability)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>