ConnexoProject/force-app/main/default/objects/Observation__c/fields/Product_Lot_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Product_Lot_Number_s__c</fullName>
    <inlineHelpText>List impacted product lots, enter NA if none.</inlineHelpText>
    <label>Product Lot Number (s)</label>
    <type>TextArea</type>
</CustomField>