ConnexoProject/force-app/main/default/objects/Observation__c/fields/QA_Comment__c.field-meta.xml
<CustomField>
    <fullName>QA_Comment__c</fullName>
    <inlineHelpText>Used by QA to describe why this observation will not become a Deviation.</inlineHelpText>
    <label>QA Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>