ConnexoProject/force-app/main/default/objects/Observation__c/fields/QA_Review_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Review Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Observations1</relationshipName>
    <type>Lookup</type>
</CustomField>