ConnexoProject/force-app/main/default/objects/Observation__c/fields/Quality_Event__c.field-meta.xml
<CustomField>
    <fullName>Quality_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Event</label>
    <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
    <relationshipLabel>Observations (Quality Event)</relationshipLabel>
    <relationshipName>Observations1</relationshipName>
    <type>Lookup</type>
</CustomField>