ConnexoProject/force-app/main/default/objects/Observation__c/fields/Reported_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Department__c</fullName>
    <label>Reported By Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TWD_Department</valueSetName>
    </valueSet>
</CustomField>