ConnexoProject/force-app/main/default/objects/Observation__c/fields/Risk_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Risk_Analysis__c</fullName>
    <inlineHelpText>Define potential issues that can negatively impact the business process.</inlineHelpText>
    <label>Risk Analysis</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>