ConnexoProject/force-app/main/default/objects/Observation__c/fields/TWD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>TWD_Due_Date__c</fullName>
    <defaultValue>IF(MOD(TODAY() - DATE(1900, 1, 6), 7) &gt; 1, TODAY()+42, (IF(MOD(TODAY() - DATE(1900, 1, 6), 7) = 0, TODAY()+41, TODAY()+40)))</defaultValue>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>