ConnexoProject/force-app/main/default/objects/Observation__c/fields/workflowuser__c.field-meta.xml
<CustomField>
    <fullName>workflowuser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the field will store the value of last performed workflow step user details</description>
    <label>workflowuser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Observations3</relationshipName>
    <type>Lookup</type>
</CustomField>