ConnexoProject/force-app/main/default/objects/Observation__c/recordTypes/Observation.recordType-meta.xml
<RecordType>
    <fullName>Observation</fullName>
    <active>true</active>
    <description>Quality Event Record Type</description>
    <label>Observation</label>
</RecordType>