ConnexoProject/force-app/main/default/objects/Observation__c/validationRules/Date_Observed_Date_Occurence_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Observed_Date_Occurence_Check</fullName>
    <active>true</active>
    <description>Date Observed should be equal to or after Date of Occurrence</description>
    <errorConditionFormula>Date_Observed__c  &lt; Date_of_Occurrence__c</errorConditionFormula>
    <errorDisplayField>Date_Observed__c</errorDisplayField>
    <errorMessage>Date Observed should be equal to or after Date of Occurrence</errorMessage>
</ValidationRule>