ConnexoProject/force-app/main/default/objects/Observation__c/validationRules/Location_Other_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Other_Required</fullName>
    <active>true</active>
    <description>If Location = Other, Location Other field is required</description>
    <errorConditionFormula>AND(ISPICKVAL( Location__c , &quot;Other&quot;), ISBLANK( Location_Other__c ))</errorConditionFormula>
    <errorMessage>If Location = Other, Location Other field is required</errorMessage>
</ValidationRule>