ConnexoProject/force-app/main/default/objects/Observation__c/validationRules/Prevent_QA_Approval_AssignedTo.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_QA_Approval_AssignedTo</fullName>
    <active>true</active>
    <description>Cannot approve a record where you are the &apos;Assigned To&apos; person</description>
    <errorConditionFormula>AND(CMPL123_WF_Action__c = &quot;QA Approve&quot;, Assigned_To__c = $User.Id)</errorConditionFormula>
    <errorMessage>Cannot approve a record where you are the &apos;Assigned To&apos; person</errorMessage>
</ValidationRule>