ConnexoProject/force-app/main/default/objects/Observation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CMPL123_WF_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>